--- a/build.yml
+++ b/build.yml
@@ -2,7 +2,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: ubuntu}
+  source: {repository: busybox}
 
 inputs:
 - name: spring-music
