--- a/build.yml
+++ b/build.yml
@@ -1,8 +1,6 @@
 platform: linux
 
-image_resource:
-  type: docker-image
-  source: {repository: busybox}
+image: docker:///datianshi/gradle
 
 inputs:
 - name: spring-music
