--- a/build.yml
+++ b/build.yml
@@ -1,6 +1,8 @@
 platform: linux
 
-image: docker:///datianshi/gradle
+image_resource:
+  type: docker-image
+  source: {repository: ubuntu}
 
 inputs:
 - name: spring-music
