--- a/build.yml
+++ b/build.yml
@@ -5,7 +5,7 @@ image_resource:
   source: {repository: limaofeng/gradle-alpine}
 
 inputs:
-- name: spring-music-res
+- name: spring-music
 
 outputs:
 - name: spring-music
